--- a/FXML/Login.fxml
+++ b/FXML/Login.fxml
@@ -2,11 +2,11 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -45,23 +45,23 @@
                <center>
                   <BorderPane BorderPane.alignment="CENTER">
                      <center>
-                        <HBox alignment="CENTER" BorderPane.alignment="CENTER">
+                        <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                            <children>
-                              <Button fx:id="ServerButton" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="SERVER" HBox.hgrow="ALWAYS">
-                                 <HBox.margin>
-                                    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-                                 </HBox.margin>
-                              </Button>
-                              <Button fx:id="ManagerButton" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" text="MANAGER" HBox.hgrow="ALWAYS">
-                                 <HBox.margin>
-                                    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-                                 </HBox.margin>
+                              <TextField fx:id="IDField" promptText="ID">
+                                 <VBox.margin>
+                                    <Insets bottom="40.0" />
+                                 </VBox.margin>
+                              </TextField>
+                              <Button fx:id="LoginButton" mnemonicParsing="false" style="-fx-background-color: #68d955;" text="LOGIN" textFill="WHITE">
+                                 <font>
+                                    <Font name="System Bold" size="12.0" />
+                                 </font>
                               </Button>
                            </children>
-                           <BorderPane.margin>
-                              <Insets bottom="50.0" left="100.0" right="100.0" top="50.0" />
-                           </BorderPane.margin>
-                        </HBox>
+                           <padding>
+                              <Insets left="200.0" right="200.0" />
+                           </padding>
+                        </VBox>
                      </center>
                   </BorderPane>
                </center>
