--- a/FXML/Inventory.fxml
+++ b/FXML/Inventory.fxml
@@ -3,56 +3,114 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml" fx:controller="InventoryController"
-            prefWidth="800" prefHeight="600">
+<BorderPane xmlns:fx="http://javafx.com/fxml" fx:controller="InventoryController"
+            prefWidth="1000" prefHeight="700" style="-fx-background-color: #c76d64;">
 
-    <children>
-        <Label text="Inventory" layoutX="30" layoutY="20" style="-fx-font-size: 16px; -fx-font-weight: bold;"/>
+    <top>
+        <HBox spacing="20" alignment="CENTER_LEFT" style="-fx-background-color: #b32017; -fx-padding: 10;">
+            <Label text="Manager Identifier" style="-fx-text-fill: white; -fx-font-size: 20px; -fx-font-weight: bold;"/>
+            <Region HBox.hgrow="ALWAYS"/>
+            <Label text="TIME" style="-fx-text-fill: white; -fx-font-size: 20px; -fx-font-weight: bold;"/>
+        </HBox>
+    </top>
 
-        <TableView fx:id="tableView" layoutX="30" layoutY="50" prefWidth="740" prefHeight="200">
-            <columns>
-                <TableColumn fx:id="itemColumn" text="Item" prefWidth="200"/>
-                <TableColumn fx:id="currentQtyColumn" text="Current Qty" prefWidth="150"/>
-                <TableColumn fx:id="recommendedColumn" text="Target Qty" prefWidth="150"/>
-                <TableColumn fx:id="differenceColumn" text="Difference" prefWidth="150"/>
-            </columns>
-        </TableView>
+    <right>
+        <VBox spacing="15" alignment="CENTER" prefWidth="180" style="-fx-background-color: #d3d3d3; -fx-padding: 20;">
+            <Button fx:id="restockButton" text="Restock" onAction="#handleRestockPage"
+                    style="-fx-font-size: 16px; -fx-font-weight: bold; -fx-pref-width: 140;"/>
+            <Button fx:id="orderTrendsButton" text="Order Trends" onAction="#handleOrderTrendsPage"
+                    style="-fx-font-size: 16px; -fx-font-weight: bold; -fx-pref-width: 140;"/>
+            <Button fx:id="employeeDataButton" text="Employee Data" onAction="#handleEmployeeDataPage"
+                    style="-fx-font-size: 16px; -fx-font-weight: bold; -fx-pref-width: 140;"/>
+            <Region VBox.vgrow="ALWAYS"/>
+            <Button fx:id="logoutButton" text="LOG OUT" onAction="#handleLogout"
+                    style="-fx-font-size: 14px; -fx-font-weight: bold; -fx-background-color: #b8d8b8; -fx-pref-width: 140;"/>
+        </VBox>
+    </right>
 
-        <Label text="Restock Inventory:" layoutX="30" layoutY="270"/>
-        <ComboBox fx:id="itemSelect" layoutX="160" layoutY="265" prefWidth="180"/>
-        <TextField fx:id="quantityField" layoutX="350" layoutY="265" prefWidth="100" promptText="Qty"/>
-        <Button text="Update Inventory" layoutX="460" layoutY="265" onAction="#handleRestock"/>
+    <center>
+        <AnchorPane style="-fx-padding: 20;">
+            <children>
 
-        <Label text="Rename Item:" layoutX="30" layoutY="300"/>
-        <ComboBox fx:id="renameItemSelect" layoutX="160" layoutY="295" prefWidth="180"/>
-        <TextField fx:id="newNameField" layoutX="350" layoutY="295" prefWidth="150" promptText="New name"/>
-        <Button text="Rename Item" layoutX="510" layoutY="295" onAction="#handleRenameItem"/>
+                <Label text="Current inventory" layoutX="30" layoutY="10"
+                       style="-fx-font-size: 18px; -fx-font-weight: bold; -fx-text-fill: white;"/>
 
-        <Label text="Dish Prices" layoutX="30" layoutY="340" style="-fx-font-size: 16px; -fx-font-weight: bold;"/>
+                <TableView fx:id="tableView" layoutX="30" layoutY="40" prefWidth="740" prefHeight="200"
+                           style="-fx-background-color: white;">
+                    <columns>
+                        <TableColumn fx:id="itemColumn" text="Item" prefWidth="200"/>
+                        <TableColumn fx:id="currentQtyColumn" text="Current Qty" prefWidth="150"/>
+                        <TableColumn fx:id="recommendedColumn" text="Target Qty" prefWidth="150"/>
+                        <TableColumn fx:id="differenceColumn" text="Difference" prefWidth="150"/>
+                    </columns>
+                </TableView>
 
-        <TableView fx:id="dishTableView" layoutX="30" layoutY="370" prefWidth="740" prefHeight="150">
-            <columns>
-                <TableColumn fx:id="dishNameColumn" text="Dish Name" prefWidth="400"/>
-                <TableColumn fx:id="dishPriceColumn" text="Price" prefWidth="200"/>
-            </columns>
-        </TableView>
+                <Button fx:id="queryButton" text="Reload Inventory" layoutX="600" layoutY="250"
+                        style="-fx-background-color: #b32017; -fx-text-fill: white; -fx-font-weight: bold;"/>
+                <Button fx:id="closeButton" text="Close" AnchorPane.bottomAnchor="20" AnchorPane.rightAnchor="40"
+                        style="-fx-background-color: #b32017; -fx-text-fill: white; -fx-font-weight: bold; -fx-padding: 8 20 8 20;"/>
+                <Button fx:id="deleteInventoryButton" text="Delete Selected Item" layoutX="450" layoutY="250"
+                        onAction="#handleDeleteInventory"
+                        style="-fx-background-color: #b32017; -fx-text-fill: white; -fx-font-weight: bold;"/>
 
-        <Label text="Update Dish Price:" layoutX="30" layoutY="530"/>
-        <ComboBox fx:id="priceItemSelect" layoutX="160" layoutY="525" prefWidth="180"/>
-        <TextField fx:id="priceField" layoutX="350" layoutY="525" prefWidth="100" promptText="Price"/>
-        <Button text="Update Price" layoutX="460" layoutY="525" onAction="#handlePriceUpdate"/>
+                <Label text="Add Inventory Item:" layoutX="30" layoutY="260" style="-fx-text-fill: white;"/>
+                <TextField fx:id="addInventoryField" layoutX="160" layoutY="255" prefWidth="180" promptText="Item Name"/>
+                <Button fx:id="addInventoryButton" text="Add Item" layoutX="350" layoutY="255" onAction="#handleAddInventory"
+                        style="-fx-background-color: #b32017; -fx-text-fill: white; -fx-font-weight: bold;"/>
 
-        <Label text="Rename Dish:" layoutX="30" layoutY="560"/>
-        <ComboBox fx:id="renameDishSelect" layoutX="160" layoutY="555" prefWidth="180"/>
-        <TextField fx:id="newDishNameField" layoutX="350" layoutY="555" prefWidth="150" promptText="New dish name"/>
-        <Button text="Rename Dish" layoutX="510" layoutY="555" onAction="#handleRenameDish"/>
+                <Label text="Restock form" layoutX="30" layoutY="295"
+                       style="-fx-font-size: 18px; -fx-font-weight: bold; -fx-text-fill: white;"/>
 
-        <Button fx:id="queryButton" text="Reload Inventory" layoutX="600" layoutY="265"/>
-        <Button fx:id="closeButton" text="Close" layoutX="700" layoutY="525"/>
-    </children>
+                <Label text="Select item" layoutX="30" layoutY="330" style="-fx-text-fill: white;"/>
+                <ComboBox fx:id="itemSelect" layoutX="160" layoutY="325" prefWidth="180"/>
 
-    <padding>
-        <Insets top="10" right="10" bottom="10" left="10"/>
-    </padding>
-</AnchorPane>
+                <Label text="Quantity" layoutX="30" layoutY="365" style="-fx-text-fill: white;"/>
+                <TextField fx:id="quantityField" layoutX="160" layoutY="360" prefWidth="100" promptText="Qty"/>
+                <Button text="Update Inventory" layoutX="280" layoutY="360" onAction="#handleRestock"
+                        style="-fx-background-color: #b32017; -fx-text-fill: white; -fx-font-weight: bold;"/>
+
+                <Label text="Rename Item" layoutX="30" layoutY="400" style="-fx-text-fill: white;"/>
+                <ComboBox fx:id="renameItemSelect" layoutX="160" layoutY="395" prefWidth="180"/>
+                <TextField fx:id="newNameField" layoutX="350" layoutY="395" prefWidth="150" promptText="New name"/>
+                <Button text="Rename Item" layoutX="510" layoutY="395" onAction="#handleRenameItem"
+                        style="-fx-background-color: #b32017; -fx-text-fill: white; -fx-font-weight: bold;"/>
+
+                <Label text="Dish Prices" layoutX="30" layoutY="440"
+                       style="-fx-font-size: 18px; -fx-font-weight: bold; -fx-text-fill: white;"/>
+
+                <TableView fx:id="dishTableView" layoutX="30" layoutY="470" prefWidth="740" prefHeight="120"
+                           style="-fx-background-color: white;">
+                    <columns>
+                        <TableColumn fx:id="dishNameColumn" text="Dish Name" prefWidth="400"/>
+                        <TableColumn fx:id="dishPriceColumn" text="Price" prefWidth="200"/>
+                    </columns>
+                </TableView>
+
+                <Button fx:id="deleteDishButton" text="Delete Selected Dish" layoutX="620" layoutY="595"
+                        onAction="#handleDeleteDish"
+                        style="-fx-background-color: #b32017; -fx-text-fill: white; -fx-font-weight: bold;"/>
+
+                <Label text="Add Dish:" layoutX="30" layoutY="600" style="-fx-text-fill: white;"/>
+                <TextField fx:id="addDishNameField" layoutX="160" layoutY="595" prefWidth="180" promptText="Dish Name"/>
+                <TextField fx:id="addDishPriceField" layoutX="350" layoutY="595" prefWidth="100" promptText="Price"/>
+                <Button fx:id="addDishButton" text="Add Dish" layoutX="460" layoutY="595" onAction="#handleAddDish"
+                        style="-fx-background-color: #b32017; -fx-text-fill: white; -fx-font-weight: bold;"/>
+
+                <Label text="Update Dish Price:" layoutX="30" layoutY="630" style="-fx-text-fill: white;"/>
+                <ComboBox fx:id="priceItemSelect" layoutX="160" layoutY="625" prefWidth="180"/>
+                <TextField fx:id="priceField" layoutX="350" layoutY="625" prefWidth="100" promptText="Price"/>
+                <Button text="Update Price" layoutX="460" layoutY="625" onAction="#handlePriceUpdate"
+                        style="-fx-background-color: #b32017; -fx-text-fill: white; -fx-font-weight: bold;"/>
+
+                <Label text="Rename Dish:" layoutX="30" layoutY="660" style="-fx-text-fill: white;"/>
+                <ComboBox fx:id="renameDishSelect" layoutX="160" layoutY="655" prefWidth="180"/>
+                <TextField fx:id="newDishNameField" layoutX="350" layoutY="655" prefWidth="150" promptText="New dish name"/>
+                <Button text="Rename Dish" layoutX="510" layoutY="655" onAction="#handleRenameDish"
+                        style="-fx-background-color: #b32017; -fx-text-fill: white; -fx-font-weight: bold;"/>
+
+            </children>
+        </AnchorPane>
+    </center>
+</BorderPane>
