--- a/FXML/ManagerEmployeeData.fxml
+++ b/FXML/ManagerEmployeeData.fxml
@@ -68,9 +68,9 @@
             <!-- Action Buttons -->
             <HBox alignment="CENTER" spacing="10.0">
               <children>
-                <Button text="Hire" prefWidth="75.0"/>
-                <Button text="Fire" prefWidth="75.0"/>
-                <Button text="Update" prefWidth="75.0"/>
+                <Button fx:id="hireButton" text="Hire" prefWidth="75.0"/>
+                <Button fx:id="fireButton" text="Fire" prefWidth="75.0"/>
+                <Button fx:id="updateButton" text="Update" prefWidth="75.0"/>
               </children>
             </HBox>
 
