--- a/FXML/ServerCheckout.fxml
+++ b/FXML/ServerCheckout.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -9,6 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
 <BorderPane xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CheckoutController">
     <top>
@@ -30,17 +32,12 @@
          <children>
             <ScrollPane layoutX="27.0" layoutY="71.0" prefHeight="260.0" prefWidth="253.0">
                <content>
-                  <TextArea fx:id="orderTextArea" prefHeight="258.0" prefWidth="252.0" />
+                  <TextArea fx:id="orderTextArea" prefHeight="258.0" prefWidth="252.0"/>
                </content>
             </ScrollPane>
             <Button fx:id="cancelButton" layoutX="74.0" layoutY="341.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="146.0" text="Cancel" textFill="RED" />
             <Button fx:id="addNotesButton" layoutX="223.0" layoutY="341.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="99.0" text="Add Notes" />
             <Button fx:id="payButton" layoutX="326.0" layoutY="341.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="183.0" text="Pay" textFill="#12c421" />
-            <ScrollPane layoutX="322.0" layoutY="71.0" prefHeight="260.0" prefWidth="253.0">
-               <content>
-                  <TextArea fx:id="notesTextArea" prefHeight="258.0" prefWidth="252.0" />
-               </content>
-            </ScrollPane>
          </children>
       </AnchorPane>
    </center>
